fix: resolve text overflow and layout issues in resume

--- a/assets/css/resume.css
+++ b/assets/css/resume.css
@@ -10,7 +10,8 @@
     padding: 1em;
     flex-grow: 1;
     font-size: 80%;
-    padding: 0px 100px !important;
+    padding: 0px 100px 100px 0px !important;
+    /*padding: 0px 100px !important;*/
 }
 
 .resume-content .resume-title-section {
@@ -77,7 +78,7 @@
 }
 
 .resume-content :not(span.katex-display) > span.katex {
-    font-size: 0.9em !important;
+    font-size: 0.4em !important;
 }
 
 .resume-content svg.iconify {
@@ -101,7 +102,7 @@
 }
 
 .resume-content [data-scope="cross-ref"][data-part="reference"] {
-    font-size: 100%;
+    font-size: 20%;
     top: 0;
 }
 
@@ -129,10 +130,8 @@
 
 .resume-content .resume-item-left {
     flex: 1;
-    text-align: left;
     white-space: nowrap;
 }
-
 
 .resume-item-center {
     flex: 1;
@@ -162,5 +161,12 @@
     .resume-content .resume-item-left,
     .resume-content .resume-item-right {
         text-align: left;
+    }
+
+    .resume-content .resume-item-left {
+        white-space: normal;
+        word-break: break-word;
+        overflow: visible;
+        text-overflow: unset;
     }
 }
